# opsmesh

./: .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5d4eb983a620_add_ai_traces_table.py  6066d3336d6a_add_users_table.py  679ffdc4fe0f_add_clusters_and_dedup_fields.py  6a7f6411a3e7_add_timeline_events_table.py  79d898738194_create_incidents_table.py  9b47c4270bfb_add_score_history_table.py
apps/api/scripts/: seed.py  seed_admin.py
apps/api/src/opsmesh/: main.py
apps/api/src/opsmesh/api/: deps.py
apps/api/src/opsmesh/api/routes/: audit.py  auth.py  clusters.py  incidents.py  users.py
apps/api/src/opsmesh/core/: config.py  database.py  logging.py  redis.py  sync_database.py
apps/api/src/opsmesh/models/: __init__.py  ai_trace.py  base.py  cluster.py  event.py  incident.py  score_history.py  user.py
apps/api/src/opsmesh/schemas/: __init__.py  auth.py  cluster.py  incident.py
apps/api/src/opsmesh/services/: auth_service.py  dedup_service.py  event_service.py  incident_service.py  queue_service.py
apps/api/src/opsmesh/services/ai/: analyzer.py  client.py  prompts.py
apps/api/src/opsmesh/services/scoring/: engine.py  history.py
apps/api/src/opsmesh/worker/: ai_step.py  dedup_step.py  jobs.py  pipeline.py  run.py
apps/api/tests/: conftest.py  test_ai.py  test_api_auth.py  test_api_incidents.py  test_auth.py  test_dedup.py  test_e2e.py  test_events.py  test_failure_paths.py  test_health.py  test_incident_service.py  test_incidents.py  test_pipeline.py  test_pipeline_integration.py  test_scoring_engine.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/incidents/[id]/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: ai-analysis-panel.tsx  cluster-list.tsx  duplicate-badge.tsx  incident-table.tsx  incident-timeline.tsx  processing-badge.tsx  scoring-panel.tsx  severity-badge.tsx  stats-cards.tsx  status-badge.tsx
apps/web/src/lib/: api.ts  auth-context.tsx
apps/worker/: pyproject.toml
apps/worker/src/worker/: main.py
